--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .zdog-canvas {
-    background: #000;
+    background: #00000000;
     cursor: move;
     position: absolute;
     width: 100%;
